# placeholder-python-cli

./: README.md  pyproject.toml
starboy/: api.py  main.py  models.py
starboy/commands/: __init__.py  main.py
starboy/onboard/: __init__.py  install_pyenv.py  int_poets.py  main.py  zsh_shell.py
starboy/statics/: __init__.py  paths.py
tests/: test_starboy.py
