[tool.poetry]
name = "starboy"
version = "0.1.0"
description = ""
authors = ["Kevin Hill <kivo360@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
requests = "^2.24.0"
pydantic = "^1.7.2"
tool = "^0.8.0"
toolz = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
starboy = "starboy.main:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
